--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,4 @@ DATABASE_USER=root
 DATABASE_PASSWORD="F3C8A6=rG;ChUO)^"
 DATABASE_HOST=104.197.61.41
 DATABASE_PORT=3306
+FRONTEND_URL=http://localhost:3000
