--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.14",
     "@mui/lab": "^5.0.0-alpha.148",
-    "@mui/material": "^5.14.13",
+    "@mui/material": "^5.14.14",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
