--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,4 @@ DATABASE_PASSWORD="F3C8A6=rG;ChUO)^"
 DATABASE_HOST=104.197.61.41
 DATABASE_PORT=3306
 FRONTEND_URL=http://localhost:5173
+STORAGE_BUCKET_NAME=golden-back
