--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,13 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.14",
     "@mui/lab": "^5.0.0-alpha.148",
+    "@mui/material": "^5.14.15",
     "@mui/x-date-pickers": "^6.17.0",
     "@tanstack/react-query": "^5.4.3",
-    "@mui/material": "^5.14.15",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
-    "exceljs": "^4.4.0",
     "dayjs": "^1.11.10",
+    "exceljs": "^4.4.0",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -32,6 +32,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
