--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -32,6 +33,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/exceljs": "^1.3.0",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
