--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/exceljs": "^1.3.0",
+    "@types/file-saver": "^2.0.7",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
