--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/lab": "^5.0.0-alpha.148",
     "@mui/material": "^5.14.15",
+    "@mui/x-data-grid": "^6.18.1",
     "@mui/x-date-pickers": "^6.17.0",
     "@tanstack/react-query": "^5.4.3",
     "axios": "^1.5.1",
