--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,12 @@
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "i18next": "^23.7.7",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3"
