--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/exceljs": "^1.3.0",
     "@types/file-saver": "^2.0.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
